[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vecops"
version = "1.1.0"
authors = [
  { name="Tomáš Trachta"},
]
description = "A small library for for vector and matrix operations in vector spaces."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ponny159/vecops"